# test_tcp_sec_temp

./: CMakeLists.txt  protostructure.drawio  sdkconfig
include/: IOC.h  cryptography.h  security.h  tcpIp.h  tcpRequest.h  utils.h  wifi.h
main/: CMakeLists.txt  IOC.c  cryptography.c  main.c  security.c  tcpIp.c  tcpRequest.c  utils.c  wifi.c
proto-c/: TCPRequest.pb-c.c  TCPRequest.pb-c.h  TCPRequest.proto  tcpMessage.pb-c.c  tcpMessage.pb-c.h  tcpMessage.proto
